Added Form to capture YouTube playlist URL

--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Youtube Downloader</h1>
+    <form action="/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
