Added base template for future pages

--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube Downloader</title>
-</head>
-<body>
-    <h1>Youtube Downloader</h1>
-    <form action="/" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
-    </form>
-</body>
-</html>
+{% extends 'downloader/base.html' %}
+
+{% block content %}
+<h1>Youtube Downloader</h1>
+{{ video }}
+<form action="/" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+</form>
+{% endblock %}
