--- a/downloader/templates/downloader/base.html
+++ b/downloader/templates/downloader/base.html
@@ -1,12 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>Youtube Downloader</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
