--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -1,11 +1,14 @@
 {% extends 'downloader/base.html' %}
 
 {% block content %}
-<h1>Youtube Downloader</h1>
-{{ video }}
-<form action="/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+<div class="col-md-12 col-lg-12">
+    <h1>Youtube Downloader</h1>
+    {{ video }}
+    <form action="/" method="post">
+        {% csrf_token %}
+        {{ form}}
+
+        <button type="submit button" class="btn btn-primary btn-lg">Baixar arquivo(s)</button>
+    </form>
+</div>
 {% endblock %}
