--- a/downloader/templates/downloader/base.html
+++ b/downloader/templates/downloader/base.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,15 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>Youtube Downloader</title>
 </head>
+
 <body>
+
     <div class="container">
+        <h1>Youtube Downloader</h1>
 
         {% block content %}
         {% endblock %}
     </div>
 </body>
+
 </html>
