--- a/downloader/templates/downloader/download.html
+++ b/downloader/templates/downloader/download.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="col-md-12 col-lg-12">
-    <form action="/download" method="get">
+    <img src="{{ thumb }}" alt="Youtube thumbnail">
+    <form action="/download" method="post">
         {% csrf_token %}
         {{ form }}
-
         <button type="submit button" class="btn btn-primary btn-lg">Baixar arquivo(s)</button>
     </form>
 </div>
