feat: Audio download with title and author tagged on file

--- a/downloader/templates/downloader/download.html
+++ b/downloader/templates/downloader/download.html
@@ -3,12 +3,13 @@
 {% block content %}
 <div class="col-md-12 col-lg-12">
     <img src="{{ thumb }}" alt="Youtube thumbnail" class="img-fluid">
+    <h2>{{ youtube_title }}</h2>
     <fieldset class="form-fieldset">
-    <form action="/download" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit button" class="btn btn-primary btn-lg">Download files</button>
-    </form>
-</fieldset>
+        <form action="/download" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit button" class="btn btn-primary btn-lg">Download files</button>
+        </form>
+    </fieldset>
 </div>
 {% endblock %}
