--- a/downloader/templates/downloader/base.html
+++ b/downloader/templates/downloader/base.html
@@ -4,48 +4,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>DownTube</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <link rel="shortcut icon" href="{% static 'img/logo-download.png' %}" type="image/x-icon">
+  <title>DownTube</title>
 </head>
 
 <body>
-    <div class="page">
-        <header class="navbar navbar-expand-sm navbar-light d-print-none">
-          <div class="container-xl">
-            <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
-              <a href="#">
-                <img src="..." width="110" height="32" alt="Tabler" class="navbar-brand-image" />
-              </a>
-            </h1>
-      
-            <div class="navbar-nav flex-row order-md-last">
-              <div class="nav-item">
-                <a href="#" class="nav-link d-flex lh-1 text-reset p-0">
-                  <span class="avatar avatar-sm" style="background-image: url(https://avatars.githubusercontent.com/u/50109447?v=4)"></span>
-                  <div class="d-none d-xl-block ps-2">
-                    <div>Rafael Hentz</div>
-                    <div class="mt-1 small text-secondary">Software Engineer</div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </header>
-        <div class="page-wrapper">
-          <div class="page-body">
-            <div class="container-xl">
+  <div class="page">
+    <header class="navbar navbar-expand-sm navbar-light d-print-none">
+      <div class="container-xl">
+        <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
+          <a href="/">
+            <img src="{% static 'img/logo-download.png' %}" width="110" height="32" alt="Tabler"
+              class="navbar-brand-image" />
+          </a>
+        </h1>
 
-                {% block content %}
-                {% endblock %}
+        <div class="navbar-nav flex-row order-md-last">
+          <div class="nav-item">
+            <a href="#" class="nav-link d-flex lh-1 text-reset p-0">
+              <span class="avatar avatar-sm"
+                style="background-image: url(https://avatars.githubusercontent.com/u/50109447?v=4)"></span>
+              <div class="d-none d-xl-block ps-2">
+                <div>Rafael Hentz</div>
+                <div class="mt-1 small text-secondary">Software Engineer</div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
-      
+    </header>
+    <div class="page-wrapper">
+      <div class="page-body">
+        <div class="container-xl">
+
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
