feat: Added more info about the file to be downloaded

--- a/downloader/templates/downloader/download.html
+++ b/downloader/templates/downloader/download.html
@@ -2,14 +2,33 @@
 
 {% block content %}
 <div class="col-md-12 col-lg-12">
-    <img src="{{ thumb }}" alt="Youtube thumbnail" class="img-fluid">
-    <h2>{{ youtube_title }}</h2>
+    <div class="row p-2">
+        <div class="col-md-4 col-lg-4">
+            <img src="{{ yt_video.thumbnail_url }}" alt="Youtube thumbnail" class="img-fluid">
+        </div>
+        <div class="col-md-8 col-lg-8">
+            <h2>{{ youtube_title }}</h2>
+            <p>Description: {{yt_video.description}}</p>
+            <p>Author: {{yt_video.author}}</p>
+            <p>Views: {{yt_video.views}}</p>
+            <p>Publish Date: {{yt_video.publish_date}}</p>
+        </div>
+    </div>
     <fieldset class="form-fieldset">
         <form action="/download" method="post">
-            {% csrf_token %}
-            {{ form }}
-            <button type="submit button" class="btn btn-primary btn-lg">Download files</button>
+            <div class="input-group">
+                {% csrf_token %}
+                {{ form }}
+            </div>
+            <div class="p-2">
+                <button type="submit button" class="btn btn-primary btn-lg">Download files</button>
+            </div>
         </form>
     </fieldset>
 </div>
+<script>
+    const progressBar = document.getElementById('progress-bar');
+    progressBar.style.width = `${progress}%`;
+    progressBar.setAttribute('aria-valuenow', progress);
+</script>
 {% endblock %}
