--- a/downloader/templates/downloader/base.html
+++ b/downloader/templates/downloader/base.html
@@ -22,7 +22,7 @@
               class="navbar-brand-image" />
           </a>
         </h1>
-
+        <h1>DownTube</h1>
         <div class="navbar-nav flex-row order-md-last">
           <div class="nav-item">
             <a href="#" class="nav-link d-flex lh-1 text-reset p-0">
