--- a/downloader/templates/downloader/base.html
+++ b/downloader/templates/downloader/base.html
@@ -25,7 +25,7 @@
         <h1>DownTube</h1>
         <div class="navbar-nav flex-row order-md-last">
           <div class="nav-item">
-            <a href="#" class="nav-link d-flex lh-1 text-reset p-0">
+            <a href="https://github.com/hentzrafael" class="nav-link d-flex lh-1 text-reset p-0" target="_blank">
               <span class="avatar avatar-sm"
                 style="background-image: url(https://avatars.githubusercontent.com/u/50109447?v=4)"></span>
               <div class="d-none d-xl-block ps-2">
