feat: Added Celery progress bar for multi-thread download

--- a/downloader/templates/downloader/download.html
+++ b/downloader/templates/downloader/download.html
@@ -1,34 +1,19 @@
 {% extends 'downloader/base.html' %}
-
+{% load static %}
 {% block content %}
 <div class="col-md-12 col-lg-12">
     <div class="row p-2">
-        <div class="col-md-4 col-lg-4">
-            <img src="{{ yt_video.thumbnail_url }}" alt="Youtube thumbnail" class="img-fluid">
+        <div class='progress-wrapper'>
+            <div id='progress-bar' class='progress-bar' style="background-color: #68a9ef; width: 0%;">&nbsp;</div>
         </div>
-        <div class="col-md-8 col-lg-8">
-            <h2>{{ youtube_title }}</h2>
-            <p>Description: {{yt_video.description}}</p>
-            <p>Author: {{yt_video.author}}</p>
-            <p>Views: {{yt_video.views}}</p>
-            <p>Publish Date: {{yt_video.publish_date}}</p>
-        </div>
+        <div id="progress-bar-message">Waiting for download to start...</div>
     </div>
-    <fieldset class="form-fieldset">
-        <form action="/download" method="post">
-            <div class="input-group">
-                {% csrf_token %}
-                {{ form }}
-            </div>
-            <div class="p-2">
-                <button type="submit button" class="btn btn-primary btn-lg">Download files</button>
-            </div>
-        </form>
-    </fieldset>
 </div>
+<script src="{% static 'celery_progress/celery_progress.js' %}"></script>
 <script>
-    const progressBar = document.getElementById('progress-bar');
-    progressBar.style.width = `${progress}%`;
-    progressBar.setAttribute('aria-valuenow', progress);
+    document.addEventListener("DOMContentLoaded", function () {
+        var progressUrl = "{% url 'celery_progress:task_status' task_id %}";
+        CeleryProgressBar.initProgressBar(progressUrl);
+    });
 </script>
 {% endblock %}
