--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -4,16 +4,17 @@
 <div class="col-md-12 col-lg-12">
     <h2>Welcome to Downtube!</h2>
     <p>This project allows you to easily download videos and playlists from YouTube.</p>
-    <p>We do not allow/support the download of copyrighted content. This project has the sole purpose of showing the use of Django to develop Python Web Applications.</p>
+    <p>We do not allow/support the download of copyrighted content. This project has the sole purpose of showing the use
+        of Django to develop Python Web Applications.</p>
     <fieldset class="form-fieldset">
-    <form action="/download" method="get">
-        {% csrf_token %}
+        <form action="/details" method="get">
+            {% csrf_token %}
 
-        <label class="form-label">Youtube URL</label>
-        {{ form }}
+            <label class="form-label">Youtube URL</label>
+            {{ form }}
 
-        <button type="submit" class="btn btn-primary btn-lg">Download!</button>
-    </form>
-</fieldset>
+            <button type="submit" class="btn btn-primary btn-lg">Download!</button>
+        </form>
+    </fieldset>
 </div>
 {% endblock %}
